sand-macros/tests/cases/fail_empty_body.stderr
error[E0277]: `i32` is not an iterator
 --> tests/cases/fail_empty_body.rs:6:5
  |
4 | #[function]
  | ----------- required by a bound introduced by this call
5 | fn wrong_return_type() {
6 |     42i32
  |     ^^^^^ `i32` is not an iterator
  |
  = help: the trait `Iterator` is not implemented for `i32`
  = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`
  = note: required for `i32` to implement `IntoIterator`
note: required by a bound in `extend`
 --> $RUST/core/src/iter/traits/collect.rs
  |
  |     fn extend<T: IntoIterator<Item = A>>(&mut self, iter: T);
  |                  ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Extend::extend`
